app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kv-app
  template:
    metadata:
      labels:
        app: kv-app
    spec:
      containers:
      - name: kv-app-container
        image: copilotregistryccq2.azurecr.io/app
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empty-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: empty-app
  template:
    metadata:
      labels:
        app: empty-app
    spec:
      containers:
      - name: empty-app-container
        image: copilotregistryccq2.azurecr.io/app
        ports:
        - containerPort: 80
