network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-policy
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kv-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kv-app
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 172.0.0.10/24
